--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-  "build": "node index.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node start.js",
   },
   "keywords": [],
   "author": "",
